# minecraft_clone

./: CMakeLists.txt  application.cpp  application.h  chunks.cpp  chunks.h  main.cpp  player.cpp  player.h  render.cpp  render.h
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
